[package]
name = "smlang"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>", "Donny Zimmanck <dzimmanck@gmail.com>"]
description = "A no-std state machine language DSL"
keywords = ["dsl", "statemachine"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/smlang-rs"
version = "0.6.0"
edition = "2018"
readme = "README.md"

[dependencies]
smlang-macros = { path = "macros", version = "0.6.0" }

[dev-dependencies]
smol = "1"
async-trait = "0.1.68"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
trybuild = "1.0"

[[test]]
name = "test"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["macros"]

[features]
default = []

graphviz = ["smlang-macros/graphviz"]
