[package]
name = "smlang-macros"
categories = ["embedded", "no-std"]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "Procedual macros for the smlang crate"
keywords = ["dsl", "statemachine"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/smlang-rs"
version = "0.1.0"
edition = "2018"
readme = "../README.md"

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "0.15"

[lib]
proc-macro = true
